# tasks_bulkmt

./: .travis.yml  CMakeLists.txt  bulkmt.h  commands_handler.h  commands_queue.h  main.cpp  unit_tests.cpp
